tests/paczka1/fuzzy1/20456807.err
Error in line 2: luINFbfTk4 A434 72,9
Error in line 8: luINFbfTk4 S49 53,0
Error in line 11: VBPO A848 47,1
Error in line 15: VBPO S49 63,1
Error in line 9: wZM A434 69,0
Error in line 17: 3oHhgjJAbD A885 53,2
Error in line 1: 3hHKSj0LDx S49 25,2
Error in line 27: ACMNXdvC A885 12,3
